# llm_engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt
examples/: CMakeLists.txt  cli_chat.cpp
include/llmengine/: backend.hpp  binary_reader.hpp  context.hpp  engine.hpp  gguf_loader.hpp  graph_executor.hpp  kv_cache.hpp  memory_mapped_file.hpp  model.hpp  model_config.hpp  model_helper.hpp  model_loader.hpp  model_weights.hpp  ops.hpp  rope_cache.hpp  sampler.hpp  scratch_arena.hpp  tensor.hpp  tensor_loader.hpp  tokenizer.hpp  tokenizer_utf8.hpp  transformer_block.hpp
src/: backend.cpp  context.cpp  engine.cpp  gguf_loader.cpp  graph_executor.cpp  kv_cache.cpp  model.cpp  model_helper.cpp  model_loader.cpp  ops.cpp  rope_cache.cpp  sampler.cpp  scratch_arena.cpp  tensor.cpp  tensor_loader.cpp  tokenizer.cpp  tokenizer_bpe.cpp  tokenizer_decoder.cpp  tokenizer_sentencepiece.cpp  tokenizer_special.cpp  tokenizer_unigram.cpp  tokenizer_utf8.cpp  transformer_block.cpp
src/platform/: memory_mapped_file_posix.cpp  memory_mapped_file_win.cpp
tests/: CMakeLists.txt  test_backend.cpp  test_gguf_loader.cpp  test_kv_cache.cpp  test_model.cpp  test_sampler.cpp  test_scratch_arena.cpp  test_tokenizer.cpp
